GitBook: [master] 2 pages and one asset modified